objects/Agenda_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Briefing_Status__c</fullName>
        <label>Briefing Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Briefing_Type__c</fullName>
        <label>Briefing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEE_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CEE Attendee</label>
        <referenceTo>CEE_Attendee__c</referenceTo>
        <relationshipLabel>Agenda Items</relationshipLabel>
        <relationshipName>Agenda_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catering_Attendees__c</fullName>
        <description>Number of Attendees accounted for Catering.</description>
        <label>Attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Catering_Cost_Per_Person__c</fullName>
        <description>Cost of Catering per person.</description>
        <label>Cost Per Person</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Catering_Department_Code__c</fullName>
        <description>Department to be billed for Catering.</description>
        <label>Department Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catering_Funding__c</fullName>
        <description>The funding group supporting Cost of Catering</description>
        <label>Funding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EBC Funded</fullName>
                </value>
                <value>
                    <fullName>Account Team Funded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Catering_Total_Cost__c</fullName>
        <formula>Catering_Attendees__c * Catering_Cost_Per_Person__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Catering_Type__c</fullName>
        <description>Type of catering provided for Agenda Item.</description>
        <label>Catering Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast - Hot Food and Drinks</fullName>
                </value>
                <value>
                    <fullName>Breakfast - Cold Food and Drinks</fullName>
                </value>
                <value>
                    <fullName>Morning Snacks</fullName>
                </value>
                <value>
                    <fullName>Lunch - Hot Food and Drinks</fullName>
                </value>
                <value>
                    <fullName>Lunch - Cold Food and Drinks</fullName>
                </value>
                <value>
                    <fullName>Afternoon Snacks</fullName>
                </value>
                <value>
                    <fullName>Drinks Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Engagements_Events__c</fullName>
        <label>Customer Engagements &amp; Events</label>
        <referenceTo>CEE__c</referenceTo>
        <relationshipLabel>Agenda Items</relationshipLabel>
        <relationshipName>Agenda_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>In-Person</fullName>
                    <default>true</default>
                    <label>In-Person</label>
                </value>
                <value>
                    <fullName>Telepresence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Delivery_Location_s__c</fullName>
        <inlineHelpText>Mandatory for demo topics only</inlineHelpText>
        <label>Demo Delivery Location(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Galway</fullName>
                </value>
                <value>
                    <fullName>Herndon</fullName>
                </value>
                <value>
                    <fullName>Howe</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>No Remote Location</fullName>
                    <default>true</default>
                    <label>No Remote Location</label>
                </value>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Oslo</fullName>
                </value>
                <value>
                    <fullName>Richardson</fullName>
                </value>
                <value>
                    <fullName>RTP</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>SJ</fullName>
                </value>
                <value>
                    <fullName>Songdo</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Tokyo</fullName>
                </value>
                <value>
                    <fullName>Toronto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF ( End_Date_Time__c - Start_Date_Time__c &gt; 0,
TEXT(FLOOR( End_Date_Time__c - Start_Date_Time__c)) &amp; " days " &amp;
TEXT( FLOOR( 24 * ( End_Date_Time__c - Start_Date_Time__c - FLOOR(End_Date_Time__c - Start_Date_Time__c) ))) &amp; " hours " &amp;
TEXT( ROUND(60 * (ROUND( 24 * ( End_Date_Time__c - Start_Date_Time__c - FLOOR(End_Date_Time__c - Start_Date_Time__c) ),8) - FLOOR(
ROUND( 24 * ( End_Date_Time__c - Start_Date_Time__c - FLOOR(End_Date_Time__c - Start_Date_Time__c) ),8)) ),0)) &amp; " minutes  "
, "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time_Site__c</fullName>
        <label>End Time (Site)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Contact_Email__c</fullName>
        <description>Engagement Contact Email</description>
        <formula>Customer_Engagements_Events__r.Engagement_Contact_Email__c</formula>
        <label>Engagement Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Contact_Name__c</fullName>
        <description>Engagement Contact Name</description>
        <formula>Customer_Engagements_Events__r.Engagement_Contact_Name__c</formula>
        <label>Engagement Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Customer_Engagements_Events__r.Event_Name__c</description>
        <formula>""</formula>
        <label>zzEvent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlook_Status__c</fullName>
        <label>Outlook Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Presenters__c</fullName>
        <label>Presenters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Objectives__c</fullName>
        <label>Sales Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Rooms_Display__c</fullName>
        <label>Selected Rooms Display</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Rooms__c</fullName>
        <label>Selected Rooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Sites_Display__c</fullName>
        <label>Selected Sites Display</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Sites__c</fullName>
        <label>Selected Sites</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
                <value>
                    <fullName>Value 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time_Site__c</fullName>
        <label>Start Time (Site)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMP_AGENDA_ITEM_ID__c</fullName>
        <label>TEMP_AGENDA_ITEM_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_CEE__c</fullName>
        <formula>'Briefing ID Goes here'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp_CEE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Name__c</fullName>
        <label>Topic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipLabel>Agenda Items</relationshipLabel>
        <relationshipName>Agenda_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Agenda_Duration__c</fullName>
        <formula>(End_Date_Time__c - Start_Date_Time__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Agenda Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agenda Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>TEMP_AGENDA_ITEM_ID__c</columns>
        <columns>Temp_CEE__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Agenda_Item_Name_Not_Empty</fullName>
        <active>true</active>
        <description>Check to see if the Agenda Item has a Name</description>
        <errorConditionFormula>ISNULL(Name) || ISBLANK(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name of the Presentation/Item required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agenda_item_Start_or_End_within_Briefing</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Start_Date_Time__c &lt; Customer_Engagements_Events__r.Start_Date_Time__c, Start_Date_Time__c &gt;= Customer_Engagements_Events__r.End_Date_Time__c, End_Date_Time__c &lt;= Customer_Engagements_Events__r.Start_Date_Time__c, End_Date_Time__c &gt; Customer_Engagements_Events__r.End_Date_Time__c)</errorConditionFormula>
        <errorMessage>Agenda item Date/time needs to be within Briefing's Start or End Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dates_Within_Briefing_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>The times chosen are outside the duration of the Briefing. Please select times within the Briefing window.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Demo_Delivery_location_Mandatory</fullName>
        <active>true</active>
        <description>Virtual Demo Delivery Location field is mandatory form Topic  is Organizing Principle is "Demo"</description>
        <errorConditionFormula>Topic__r.Organizing_Principle__c = 'Demo' &amp;&amp;  ISNULL(Demo_Delivery_Location_s__c)</errorConditionFormula>
        <errorDisplayField>Demo_Delivery_Location_s__c</errorDisplayField>
        <errorMessage>Demo Delivery Location is Mandatory for Demo Solutions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Earlier_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Start_Date_Time__c &gt;= End_Date_Time__c, true, false)</errorConditionFormula>
        <errorDisplayField>Account_Name__c</errorDisplayField>
        <errorMessage>Please choose a Start Date that is earlier than the End Date.</errorMessage>
    </validationRules>
</CustomObject>